adding models and active admin to backoffice

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,18 +17,18 @@
 development: &default
   adapter: postgresql
   encoding: unicode
-  database: rails-bootstrap_development
+  database: grand-friend_development
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV.fetch('DB_USERNAME', 'rails-bootstrap') %>
-  password: <%= ENV.fetch('DB_PASSWORD', 'rails-bootstrap') %>
+  username: <%= ENV.fetch('DB_USERNAME', 'grand-friend') %>
+  password: <%= ENV.fetch('DB_PASSWORD', 'grand-friend') %>
   host: <%= ENV.fetch('DB_HOST', 'localhost') %>
   port: <%= ENV.fetch('DB_PORT', '5432') %>
 
 test: &test
   <<: *default
-  database: rails-bootstrap_test
+  database: grand-friend_test
 
 production:
   adapter: postgresql
